--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   background-image: url('../src/images/wallpaper.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -37,3 +38,23 @@ body {
   margin-right: 40px;
 }
 
+.cover-btn {
+  padding: 10px;
+  margin: 2%;
+}
+
+
+// @keyframes hue-rotate {
+//       from {
+//         -webkit-filter: hue-rotate(0);
+//         -moz-filter: hue-rotate(0);
+//         -ms-filter: hue-rotate(0);
+//         filter: hue-rotate(0);
+//       }
+//       to {
+//         -webkit-filter: hue-rotate(360deg);
+//         -moz-filter: hue-rotate(360deg);
+//         -ms-filter: hue-rotate(360deg);
+//         filter: hue-rotate(360deg);
+//       }
+// }
